@@ -4,6 +4,7 @@ import org.junit.Ignore;
 import org.junit.Test;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -13,7 +14,7 @@ public class ConvertList2ArrayTest {
     @Test
     public void when7ElementsThen9() {
         int[][] result = ConvertList2Array.toArray(
-                Arrays.asList(9, 8, 7, 6, 5, 4, 3),
+                List.of(9, 8, 7, 6, 5, 4, 3),
                 3
         );
         int[][] expect = {
